# biopoly-formulation-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATA_CARD.md  DATA_STRATEGY.md  Dockerfile  README.md  ROADMAP.md  WALKTHROUGH.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: .gitkeep  real_formulations.csv  real_seed.csv
docs/: MULTI_TENANCY.md  RESULTS.md
frontend/: streamlit_app.py
scripts/: check_commit_msg.py  report.py  retrain.py
src/biopoly/: __init__.py  active_learning.py  config.py  features.py  representation.py  signals.py  timeseries.py
src/biopoly/api/: main.py  models.py  tenancy.py
src/biopoly/data/: chemistry.py  generate.py  real_seed.py  schema.py
src/biopoly/inverse/: baseline.py  bayesopt.py  common.py
src/biopoly/models/: conformal.py  forward.py  metrics.py  registry.py  train.py
src/biopoly/monitoring/: drift.py  retrain.py
src/biopoly/tracking/: base.py  clearml_tracker.py  mlflow_tracker.py
tests/: conftest.py  test_active_learning.py  test_api.py  test_chemistry.py  test_conformal.py  test_data.py  test_drift.py  test_features.py  test_forward.py  test_inverse.py  test_registry.py  test_representation.py  test_schema.py  test_signals.py  test_timeseries.py
