[project]
name = "biopoly"
version = "0.1.0"
description = "Forward + inverse ML for compostable biopolymer formulation (synthetic-data demo)."
readme = "README.md"
authors = [{ name = "biopoly contributors" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "matplotlib>=3.8",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "mlflow>=2.14",
]

[project.optional-dependencies]
clearml = ["clearml>=1.16"]
drift = ["evidently>=0.4"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.scripts]
biopoly-generate = "biopoly.data.generate:main"
biopoly-train = "biopoly.models.train:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "layer(n): spiral complexity layer, 1 (simplest) .. 9 (full system)",
]
