[project]
name = "biopoly"
version = "0.1.0"
description = "Forward + inverse ML for compostable biopolymer formulation (synthetic-data demo)."
readme = "README.md"
authors = [{ name = "biopoly contributors" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "matplotlib>=3.8",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "mlflow>=2.14",
]

[project.optional-dependencies]
clearml = ["clearml>=1.16"]
drift = ["evidently>=0.4"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
biopoly-generate = "biopoly.data.generate:main"
biopoly-train = "biopoly.models.train:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
# Require docstrings on modules, classes and free functions. Methods on an
# already-documented class (D102), package files (D104), magic methods (D105) and
# __init__ (D107) are exempt — the class docstring carries the contract.
ignore = ["D102", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Docstrings are a library concern; tests and one-off scripts are exempt.
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true   # numpy/pandas/lightgbm/optuna stubs are partial
warn_unused_ignores = true
no_implicit_optional = true

[tool.coverage.run]
source = ["biopoly"]

[tool.coverage.report]
# Optional tracking backends + the CLI entrypoint are exercised out-of-band, not in CI.
omit = ["*/tracking/clearml_tracker.py", "*/tracking/mlflow_tracker.py", "*/models/train.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "layer(n): spiral complexity layer, 1 (simplest) .. 9 (full system)",
]
